Closed
Bug 494301
Opened 16 years ago
Closed 16 years ago
Scrollbar not resized on Pill button click
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a1
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta1-fixed |
People
(Reporter: zpao, Assigned: mstange)
Details
(Keywords: polish, regression)
Attachments
(2 files)
|
263.24 KB,
image/png
|
Details | |
|
824 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090521 Shiretoko/3.5pre ID:20090521030957
So instead of resizing the vertical scrollbar when the pill (remove toolbar) button is clicked, it just gets shifted up (by what looks like the height of the toolbar).
STR:
1. Navigate to page that requires scrolling.
2. Press Pill button to remove toolbar.
Expected Behavior:
1. Scrollbar is resized.
(confirmed with new profile; presumably applies to trunk, but didn't test)
Comment 1•16 years ago
|
||
This doesn't happen with Firefox 3, so it's a regression in the last year...
Keywords: regression,
regressionwindow-wanted
Updated•16 years ago
|
Flags: wanted1.9.1+
Flags: blocking1.9.2+
Flags: blocking1.9.1-
Updated•16 years ago
|
Flags: wanted1.9.1.x?
Comment 2•16 years ago
|
||
Isn't this a dupe of bug 451641 ?
| Reporter | ||
Comment 3•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → DUPLICATE
Updated•16 years ago
|
Flags: wanted1.9.1.x?
Un-duping for a quick fix.
Status: RESOLVED → REOPENED
Flags: blocking1.9.2+
Resolution: DUPLICATE → ---
Assignee: nobody → mstange
| Assignee | ||
Updated•16 years ago
|
Status: REOPENED → ASSIGNED
Keywords: regressionwindow-wanted
Updated•16 years ago
|
Priority: -- → P2
| Assignee | ||
Comment 6•16 years ago
|
||
There's a number of cases that this approach gets wrong, for example collapsing a toolbar when the statusbar is hidden will cause the scrollbar to go under the resizer... but all in all it's better than before bug 56488 and fixes the special case of this bug (collapsing toolbars with statusbar visible).
I thought about adding a ContainsZeroSizedPoint method to nsRect, but I don't think it's worth it just for this one use case.
Attachment #403608 -
Flags: review?(roc)
Attachment #403608 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 7•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago → 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Comment 8•16 years ago
|
||
status1.9.2:
--- → beta1-fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•