Bug 494301 - Scrollbar not resized on pill button click. r=roc